# pikvm-ha-sensors

./: .gitignore  AGENTS.md  README.md  config.sample.yaml  install.sh  pikvm-ha-sensors.py  pikvm-ha-sensors.service  pyproject.toml  requirements.txt  sensors.sample.yaml  sensors.yaml  setup.sh
sensor_types/: ds18b20.py  hostinfo.py  htu21d.py  kvmd.py  measurementerror.py  sysinfo.py
