[project]
name = "pikvm-ha-sensors"
version = "0.3.0"
description = "A Python script for collecting sensor information running on PiKVM, and exporting to Home Assistant."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt",
    "pyyaml",
    "retrying",
    "w1thermsensor>=2.0",
    "adafruit-circuitpython-htu21d",
    "python-pacman ; sys_platform == 'linux'",
    "prometheus-client",
    "requests",
]

[dependency-groups]
dev = [
    # Don't install these packages with uv on a real PiKVM —
    # they're already available via the system site-packages.
    # kvmd is out of date on PyPI, the others include binary
    # components which won't work in the venv on a PiKVM
    # because the filesystem is mounted noexec.
    "kvmd @ git+https://github.com/pikvm/kvmd.git@v4.132",
    "netifaces",
    "psutil",
    "RPi.GPIO ; sys_platform == 'linux'",
]

[tool.uv]
package = false
default-groups = []
